--- a/.github/workflows/check_all_temps.yml
+++ b/.github/workflows/check_all_temps.yml
@@ -2,7 +2,7 @@ name: Check All Temperatures
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "0 */4 * * *"
   workflow_dispatch:
 
 jobs:
